@@ -5,7 +5,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collections;
@@ -18,6 +18,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import javax.xml.XMLConstants;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
@@ -160,7 +161,8 @@ public class IoWagoImpl extends AbstractOpenemsModbusComponent
 
 	private static Document downloadConfigXml(InetAddress ip, String filename, String username, String password)
 			throws ParserConfigurationException, SAXException, IOException {
-		var url = new URL(String.format("http://%s/etc/%s", ip.getHostAddress(), filename));
+		var uri = URI.create(String.format("http://%s/etc/%s", ip.getHostAddress(), filename));
+		var url = uri.toURL();
 		var authStr = String.format("%s:%s", username, password);
 		var bytesEncoded = Base64.getEncoder().encode(authStr.getBytes());
 		var authEncoded = new String(bytesEncoded);
@@ -176,6 +178,7 @@ public class IoWagoImpl extends AbstractOpenemsModbusComponent
 	protected static Document parseXmlToDocument(InputStream is)
 			throws ParserConfigurationException, SAXException, IOException {
 		var dbFactory = DocumentBuilderFactory.newInstance();
+		dbFactory.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
 		var dBuilder = dbFactory.newDocumentBuilder();
 		var doc = dBuilder.parse(is);
 		doc.getDocumentElement().normalize();
@@ -303,8 +306,8 @@ public class IoWagoImpl extends AbstractOpenemsModbusComponent
 
 	@Override
 	public BooleanReadChannel[] digitalInputChannels() {
-		List<BooleanReadChannel> channels = new ArrayList<>();
-		for (FieldbusModule module : this.modules) {
+		var channels = new ArrayList<BooleanReadChannel>();
+		for (var module : this.modules) {
 			Collections.addAll(channels, module.getChannels());
 		}
 		var result = new BooleanReadChannel[channels.size()];
@@ -316,11 +319,11 @@ public class IoWagoImpl extends AbstractOpenemsModbusComponent
 
 	@Override
 	public BooleanWriteChannel[] digitalOutputChannels() {
-		List<BooleanWriteChannel> channels = new ArrayList<>();
-		for (FieldbusModule module : this.modules) {
-			for (BooleanReadChannel channel : module.getChannels()) {
-				if (channel instanceof BooleanWriteChannel) {
-					channels.add((BooleanWriteChannel) channel);
+		var channels = new ArrayList<BooleanWriteChannel>();
+		for (var module : this.modules) {
+			for (var channel : module.getChannels()) {
+				if (channel instanceof BooleanWriteChannel bwc) {
+					channels.add(bwc);
 				}
 			}
 		}
